# leviticus

./: AGY.md  Cargo.toml  REVELATION.md  explain.md  feedback.md
ai/: architecture-guide.md  fs-concepts-structure.md
src/: LONGEST.md  lib.rs  main.rs  reg_command.rs  router.rs
src/cli/: command.rs
src/daemon/: bootstrap.rs  config.rs  initialize.rs  mod.rs  reload.rs  resolver.rs  run.rs  start.rs  state.rs  status.rs  stop.rs
src/daemon/data/: explain.json  manifest.json  symbols.json
src/projection/: command.rs  document.rs  mod.rs
src/projection/view/: mod.rs
src/state/: state.rs
